[package]
name = "doorstop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
azalea-auth = { git = "https://github.com/Shays-Forks/azalea" }
azalea-chat = { git = "https://github.com/Shays-Forks/azalea" }
azalea-client = { git = "https://github.com/Shays-Forks/azalea" }
azalea-crypto = { git = "https://github.com/Shays-Forks/azalea" }
azalea-protocol = { git = "https://github.com/Shays-Forks/azalea" }
lazy_static = "1"
rand = "0.8"
regex = "1"
rsa = "0.9"
rsa-der = "0.3"
tokio = { version = "1", features = ["full"] }
uuid = "1"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
