[package]
name = "doorstop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
azalea-auth = "0.10"
azalea-buf = "0.10"
azalea-chat = "0.10"
azalea-client = "0.10"
azalea-core = "0.10"
azalea-crypto = "0.10"
azalea-protocol = "0.10"
env_logger = "0.11"
lazy_static = "1"
minecraft_folder_path = "0.1"
rand = "0.8"
regex = "1"
rsa = "0.9"
rsa-der = "0.3"
tokio = { version = "1", features = ["full"] }
uuid = "1"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
